Comment out 15 multiple facts in index.html

--- a/index.html
+++ b/index.html
@@ -394,36 +394,36 @@
 
         // --- Facts Array ---
         const facts = [
-            "Finacle is developed by <span class='highlight'>Infosys</span>, one of the world's leading banking technology providers. It's used by over <span class='highlight'>100 countries</span> and more than <span class='highlight'>450 banks</span> worldwide.",
-            "Finacle stands for <span class='highlight'>Financial Network</span> and <span class='highlight'>Integrated Computerized Accounting Logic Engine</span>.",
-            "Finacle is a <span class='highlight'>browser-based application</span> — you can access it from any authorized system on the bank's network.",
-            "Finacle supports <span class='highlight'>real-time processing</span> — once a transaction is posted, it updates the core records instantly.",
-            "Finacle can handle multiple <span class='highlight'>branches, currencies, and products</span> all within one system.",
-            "Finacle integrates seamlessly with <span class='highlight'>digital channels</span> like mobile and internet banking.",
-            "Finacle is <span class='highlight'>modular</span> — each department (Deposits, Loans, GL, etc.) has dedicated modules.",
-            "The new version of Finacle offers <span class='highlight'>faster transaction speeds</span> and improved interface navigation.",
-            "Finacle has <span class='highlight'>role-based access</span> — users only see menus relevant to their department.",
-            "Finacle uses <span class='highlight'>parameterization</span>, allowing banks to configure products and charges without new coding.",
-            "Always log in with your unique <span class='highlight'>User ID</span> and password assigned by the system administrator.",
-            "Finacle supports <span class='highlight'>two-factor authentication</span> for sensitive roles.",
-            "Change your password anytime using the <span class='highlight'>CHGPWD</span> menu.",
-            "After <span class='highlight'>3 incorrect login attempts</span>, your account automatically locks for security.",
-            "Every screen in Finacle has a <span class='highlight'>function code</span> — type it to navigate quickly.",
-        //     "The <span class='highlight'>F4 key (Clear)</span> cancels a current operation in Finacle.",
-        //     "The <span class='highlight'>F3 key (Go)</span> executes or proceeds with a menu option.",
-        //     "The <span class='highlight'>F2 key</span> displays a list of possible options for a field (picklist).",
-        //     "The <span class='highlight'>F1 key</span> provides context help on the current field.",
-        //     "Finacle automatically logs out <span class='highlight'>idle users</span> after a set time for security.",
-        //     "Every customer in Finacle has a unique <span class='highlight'>CIF (Customer Information File)</span> number.",
-        //     "The <span class='highlight'>CIF</span> acts as a customer's identity across all branches and products.",
-        //     "You can retrieve customer details using the <span class='highlight'>CUMM</span> or <span class='highlight'>CUSTINQ</span> menu.",
-        //     "Updating a customer's information in one branch reflects across <span class='highlight'>all branches</span>.",
-        //     "Finacle allows <span class='highlight'>linking multiple accounts</span> under one CIF.",
-        //     "You can search customers by <span class='highlight'>name, CIF, or ID number</span>.",
-        //     "Finacle maintains a <span class='highlight'>complete history</span> of customer updates and modifications.",
-        //     "The system automatically checks for <span class='highlight'>duplicate CIF</span> creation.",
-        //     "You can view customer <span class='highlight'>risk classification</span> in their CIF record.",
-        //     "Finacle allows customer <span class='highlight'>photograph and signature upload</span> directly in the system.",
+            // "Finacle is developed by <span class='highlight'>Infosys</span>, one of the world's leading banking technology providers. It's used by over <span class='highlight'>100 countries</span> and more than <span class='highlight'>450 banks</span> worldwide.",
+            // "Finacle stands for <span class='highlight'>Financial Network</span> and <span class='highlight'>Integrated Computerized Accounting Logic Engine</span>.",
+            // "Finacle is a <span class='highlight'>browser-based application</span> — you can access it from any authorized system on the bank's network.",
+            // "Finacle supports <span class='highlight'>real-time processing</span> — once a transaction is posted, it updates the core records instantly.",
+            // "Finacle can handle multiple <span class='highlight'>branches, currencies, and products</span> all within one system.",
+            // "Finacle integrates seamlessly with <span class='highlight'>digital channels</span> like mobile and internet banking.",
+            // "Finacle is <span class='highlight'>modular</span> — each department (Deposits, Loans, GL, etc.) has dedicated modules.",
+            // "The new version of Finacle offers <span class='highlight'>faster transaction speeds</span> and improved interface navigation.",
+            // "Finacle has <span class='highlight'>role-based access</span> — users only see menus relevant to their department.",
+            // "Finacle uses <span class='highlight'>parameterization</span>, allowing banks to configure products and charges without new coding.",
+            // "Always log in with your unique <span class='highlight'>User ID</span> and password assigned by the system administrator.",
+            // "Finacle supports <span class='highlight'>two-factor authentication</span> for sensitive roles.",
+            // "Change your password anytime using the <span class='highlight'>CHGPWD</span> menu.",
+            // "After <span class='highlight'>3 incorrect login attempts</span>, your account automatically locks for security.",
+            // "Every screen in Finacle has a <span class='highlight'>function code</span> — type it to navigate quickly.",
+            "The <span class='highlight'>F4 key (Clear)</span> cancels a current operation in Finacle.",
+            "The <span class='highlight'>F3 key (Go)</span> executes or proceeds with a menu option.",
+            "The <span class='highlight'>F2 key</span> displays a list of possible options for a field (picklist).",
+            "The <span class='highlight'>F1 key</span> provides context help on the current field.",
+            "Finacle automatically logs out <span class='highlight'>idle users</span> after a set time for security.",
+            "Every customer in Finacle has a unique <span class='highlight'>CIF (Customer Information File)</span> number.",
+            "The <span class='highlight'>CIF</span> acts as a customer's identity across all branches and products.",
+            "You can retrieve customer details using the <span class='highlight'>CUMM</span> or <span class='highlight'>CUSTINQ</span> menu.",
+            "Updating a customer's information in one branch reflects across <span class='highlight'>all branches</span>.",
+            "Finacle allows <span class='highlight'>linking multiple accounts</span> under one CIF.",
+            "You can search customers by <span class='highlight'>name, CIF, or ID number</span>.",
+            "Finacle maintains a <span class='highlight'>complete history</span> of customer updates and modifications.",
+            "The system automatically checks for <span class='highlight'>duplicate CIF</span> creation.",
+            "You can view customer <span class='highlight'>risk classification</span> in their CIF record.",
+            "Finacle allows customer <span class='highlight'>photograph and signature upload</span> directly in the system.",
         //     "Each account has an <span class='highlight'>Account ID</span> that uniquely identifies it in Finacle.",
         //     "Accounts are linked to their <span class='highlight'>CIF and branch code</span>.",
         //     "You can open new accounts using the <span class='highlight'>OAAC (Open Account)</span> menu.",
